@@ -206,7 +206,7 @@
       <varlistentry>
         <term><emphasis role="bold">LOG LEVEL</emphasis> (Optional) -
         [<emphasis>log-level</emphasis>|<emphasis
-        role="bold">ULOG</emphasis>]</term>
+        role="bold">NFLOG</emphasis>]</term>
 
         <listitem>
           <para>If supplied, each connection handled under the default POLICY
@@ -214,8 +214,8 @@
           generated. See syslog.conf(5) for a description of log
           levels.</para>
 
-          <para>You may also specify ULOG (must be in upper case). This will
-          log to the ULOG target and will send to a separate log through use
+          <para>You may also specify NFLOG (must be in upper case). This will
+          log to the NFLOG target and will send to a separate log through use
           of ulogd (<ulink
           url="http://www.netfilter.org/projects/ulogd/index.html">http://www.netfilter.org/projects/ulogd/index.html</ulink>).</para>
 
