@@ -367,8 +367,8 @@
               </listitem>
             </itemizedlist>
 
-            <para>You may also specify <emphasis role="bold">ULOG</emphasis>
-            (must be in upper case) as a log level.This will log to the ULOG
+            <para>You may also specify <emphasis role="bold">NFLOG</emphasis>
+            (must be in upper case) as a log level.This will log to the NFLOG
             target for routing to a separate log through use of ulogd (<ulink
             url="http://www.netfilter.org/projects/ulogd/index.html">http://www.netfilter.org/projects/ulogd/index.html</ulink>).</para>
 
