@@ -60,10 +60,10 @@
     level to choose, 6 (info) is a safe bet. You may specify levels by name or
     by number.</para>
 
-    <para>If you have built your kernel with ULOG target support, you may also
-    specify a log level of ULOG (must be all caps). Rather than log its
+    <para>If you have built your kernel with NFLOG target support, you may
+    also specify a log level of NFLOG (must be all caps). Rather than log its
     messages to syslogd, Shorewall6 will direct netfilter to log the messages
-    via the ULOG target which will send them to a process called 'ulogd'.
+    via the NFLOG target which will send them to a process called 'ulogd'.
     ulogd is available with most Linux distributions (although it probably
     isn't installed by default). Ulogd is also available from <ulink
     url="http://www.netfilter.org/projects/ulogd/index.html">http://www.netfilter.org/projects/ulogd/index.html</ulink>
