@@ -28,7 +28,8 @@ There are two incompatible changes in this release.
 
 Problems Corrected in 4.3.3
 
-None.
+1)  Previously, if IP6TABLES wasn't specified in shorewall6.conf, it
+    was set to iptables rather than ip6tables.
 
 Other changes in 4.3.3
 
@@ -61,9 +62,10 @@ Other changes in 4.3.3
     /etc/shorewall6/interfaces. The option is the IPv6 analog of the
     'proxyarp' option in /etc/shorewall/interfaces.
 
-7)  Source anycast addresses defined by RFC 2526 are not trapped by
+7)  Source anycast addresses defined by RFC 2526 are now trapped by
     'nosmurfs'.
 
+8)  Manpages are now included for Shorewall6 and Shorewall6-lite.
 
 Migration Issues.
 
