@@ -16,6 +16,10 @@ Changes in Shorewall 4.3.3
 
 8) Add RFC 2526 anycast addresses to nosmurfs
 
+9) Add man pages for Shorewall6 and 6 Lite.
+
+10) Fix IP6TABLES when not specified.
+
 Changes in Shorewall 4.3.2
 
 1) Added 'dhcp' option.
